Fix: removendo importações não utilizadas